--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@adonisjs/view": "^6.1.0",
     "luxon": "^2.4.0",
     "moment": "^2.29.3",
+    "phc-argon2": "^1.1.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
